# hackernews-proxy

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: calculate_coverage.yml  docker-build-test.yml  run_lint.yml  run_tests.yml
Docker/nginx/: nginx.conf
Docker/www/: Dockerfile  requirements.txt
app/: app.py  config.py  logger.py  parser.py  url.py
tests/: conftest.py  test_parser_module.py  test_root_page.py
tests/fixtures/: root_page.html  root_page_correct_result.html  root_page_with_symlinks.html  root_page_with_symlinks_result.html
