[tool.poetry]
name = "hackernews"
version = "0.1.0"
description = "Solution for code hallenge by Ivelum"
authors = ["yuriy.kormin <yuriy.kormin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
Flask = "^2.3.2"
lxml = "^4.9.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
httpretty = "^1.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "DEBUG"
pythonpath = [
  "."
]