[tool.poetry]
name = "hackernews-proxy"
version = "0.1.0"
description = "Solution for code hallenge by Ivelum"
authors = ["yuriy.kormin <yuriy.kormin@gmail.com>"]
readme = "README.md"
packages = [
  {include = "app"}
]


[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
quart = "^0.18.4"
httpx = "^0.24.1"
aiodns = "^3.0.0"
aiologger = "^0.7.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
httpretty = "^1.1.4"
pytest-asyncio = "^0.21.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "DEBUG"
pythonpath = ["."]
asyncio_mode = "auto"
